menu response con html css y javascript

--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
+   <div class="container">
+       <nav class="menu" id="menu">
+        <ul>
+        <li><span class="icon_span"><i class="fas fa-home"></i></span><a href="#">Home</a></li>
+        <li><span class="icon_span"><i class="fas fa-images"></i></span><a href="#">Gallery</a></li>
+        <li><span class="icon_span"><i class="fas fa-images"></i></span><a href="#">Gallery</a></li>
+        <li><span class="icon_span"><i class="fas fa-cog"></i></span><a href="#">Settings</a></li>
+        <li><span class="icon_span"><i class="fas fa-folder-open"></i></span><a href="#">Profile</a></li>
+        <li><span class="icon_span"><i class="fas fa-users"></i></span><a href="#">Users</a></li>
+        <li><span class="icon_span"><i class="fas fa-sign-out-alt"></i></span><a href="#">Sing Out</a></li>
+        </ul>
+       </nav>
+       <span class="btn_menu" id="btn_menu"><i class="fas fa-chevron-right"></i></span>
+   </div>
     <script src="app.js" type="module"></script>
 </body>
 </html>
